--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
+EasyFFTs = "08be435b-48e7-4090-a646-9e3615ae1968"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PartialSweepSIR = "93018257-e3a9-44d7-b14d-a6c792d03116"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
