--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,18 @@
 [deps]
+BackwardCoalescent = "78ba55dc-45b1-42ca-b7d8-98224de7860d"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DiscreteRandomWalk1D = "3a17ab65-1df8-4577-9ed4-1aa8b93768dd"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 EasyFFTs = "08be435b-48e7-4090-a646-9e3615ae1968"
+FrequencyTrajectories = "a751bbe2-777c-4586-9b8f-8203e6b93e55"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PartialSweepSIR = "93018257-e3a9-44d7-b14d-a6c792d03116"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+WrightFisher = "28f02b08-ea27-4491-b13a-74513855a8ed"
