--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ DiscreteRandomWalk1D = "3a17ab65-1df8-4577-9ed4-1aa8b93768dd"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 EasyFFTs = "08be435b-48e7-4090-a646-9e3615ae1968"
 FrequencyTrajectories = "a751bbe2-777c-4586-9b8f-8203e6b93e55"
+KernelDensitySJ = "49dc5b4e-6806-4504-b2cc-a81764e7a38b"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PartialSweepSIR = "93018257-e3a9-44d7-b14d-a6c792d03116"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
